# read-book

./: README.md  entrypoint.sh  package-lock.json  package.json
api/: Dockerfile  README.md  pyproject.toml
api/src/: books.db  main.py
api/src/db/: crud.py  database.py  models.py  schemas.py
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: book-input.tsx  book-row.tsx  book-table-old.tsx  book-table.tsx  book-wrapper.tsx
ui/src/types/: book.ts
ui/src/utils/: object-equality.ts
